--- a/_awards/PTI-2013.md
+++ b/_awards/PTI-2013.md
@@ -5,4 +5,4 @@ url: http://www.pti.org/awards/abstract1.asp
 image: PTI.png
 ---
 
-**2013** - Santa Monica's Youth Tech Program received the Technology Solutions award from the Public Technology Institute. This award recognizes local governments that demonstrate how they use technology to solve problems, provide enhanced services to the public, and improve internal operations.
+**2013** - Santa Monica’s Youth Tech Program received the Technology Solutions award from the Public Technology Institute. This award recognizes local governments that demonstrate how they use technology to solve problems, provide enhanced services to the public, and improve internal operations.
