Fix invalid links on homepage under Awards section.

--- a/_awards/PTI-2013.md
+++ b/_awards/PTI-2013.md
@@ -1,7 +1,7 @@
 ---
 name: Public Technology Institute
 year: 2013
-url: http://www.pti.org/awards/abstract1.asp
+link: http://www.pti.org/awards/abstract1.asp
 image: PTI.png
 ---
 
